web commit by http://ptecza.myopenid.com/: Response

--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -307,6 +307,12 @@ in WWW browser tab than subscribing to page. --Pawel
 > Unwanted server load due to refeshing could be a problem for some.
 > --[[Joey]]
 
+>> Yes, it should be configurable by ikiwiki admin. I believe he's not
+>> stupid and he will not set too short refresh period to kill his server :)
+>> I propose to add `recentchanges_refresh` variable in ikiwiki setup
+>> to setting refresh period. If it's not defined, then ikiwiki doesn't put
+>> refresh meta tag into `recentchanges.tmpl`. Do you like it? ;) --Pawel
+
 ----
 
 # Fall back for templatedir
