* Add a Gujarati translation by Kartik Mistry. Closes: #406635

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ ikiwiki (1.39) UNRELEASED; urgency=low
   * Add a Swedish translation by Daniel Nylander. Closes: #406410
   * Add a Czech translation by Miroslav Kure.
   * Add a Bulgarian translation by Damyan Ivanov. Closes: #406580
+  * Add a Gujarati translation by Kartik Mistry. Closes: #406635
   * Fix encoding issue with use of Locale::Gettext. Seems that the OO
     interface returns proper utf-8 decoded strings, unlike the traditional
     interface, so use the OO interface.
