--- a/doc/todo/discussion_page_as_blog.mdwn
+++ b/doc/todo/discussion_page_as_blog.mdwn
@@ -23,3 +23,5 @@ don't handle threading, and of course doing this might be dependant on the
 issue above. Worrying about threading may be overkill.
 
 > Something like [[sandbox/castle]] and [[sandbox/castle/discussion]]? (Sorry about the noise, btw.) --Ethan
+
+I don't think that the nesting is very clear, I found it confusing..
