--- a/doc/bugs/Problem_with_editing_page_after_first_SVN_commit.mdwn
+++ b/doc/bugs/Problem_with_editing_page_after_first_SVN_commit.mdwn
@@ -118,3 +118,5 @@ Where is my mistake?
 
 >>>>>>>> What's your user? Please show me result of `ls -ld dir` for
 >>>>>>>> directories above :) --Pawel
+
+>>>>>>>>> All my directories are 755 joey:joey. --[[Joey]]
