--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -144,7 +144,8 @@ Thanks to subpages, every page can easily and automatically have a
 
 ### Page locking
 
-Wiki admins can lock pages so that only other admins can edit them.
+Wiki admins can [[lock_pages|page_locking]] so that only other admins
+can edit them.
 
 ### [[PageHistory]]
 
