--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ ikiwiki (1.39) UNRELEASED; urgency=low
   * Add a Czech translation by Miroslav Kure.
   * Add a Bulgarian translation by Damyan Ivanov. Closes: #406580
   * Add a Gujarati translation by Kartik Mistry. Closes: #406635
+  * Add a Vietnamese translation by Clytie Siddall.
   * Fix encoding issue with use of Locale::Gettext. Seems that the OO
     interface returns proper utf-8 decoded strings, unlike the traditional
     interface, so use the OO interface.
@@ -14,7 +15,7 @@ ikiwiki (1.39) UNRELEASED; urgency=low
     pointed elsewhere, so that only modified templates need to be copied into
     a templatedir. Based on work by JeremyReed.
 
- -- Joey Hess <joeyh@debian.org>  Fri, 12 Jan 2007 15:34:14 -0500
+ -- Joey Hess <joeyh@debian.org>  Sat, 13 Jan 2007 16:31:42 -0500
 
 ikiwiki (1.38) unstable; urgency=low
 
