--- a/debian/changelog
+++ b/debian/changelog
@@ -14,8 +14,10 @@ ikiwiki (1.39) UNRELEASED; urgency=low
   * Search in default location for templates as a fallback when templatedir is
     pointed elsewhere, so that only modified templates need to be copied into
     a templatedir. Based on work by JeremyReed.
+  * In the aggregator, check for and deal with post filenames that are
+    longer than the maximum file length.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 13 Jan 2007 16:31:42 -0500
+ -- Joey Hess <joeyh@debian.org>  Sat, 13 Jan 2007 23:03:48 -0500
 
 ikiwiki (1.38) unstable; urgency=low
 
