* Change the RecentChanges page to show the path of changed pages.

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,8 +16,9 @@ ikiwiki (1.39) UNRELEASED; urgency=low
     a templatedir. Based on work by JeremyReed.
   * In the aggregator, check for and deal with post filenames that are
     longer than the maximum file length.
+  * Change the RecentChanges page to show the path of changed pages.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 13 Jan 2007 23:03:48 -0500
+ -- Joey Hess <joeyh@debian.org>  Sat, 13 Jan 2007 23:30:20 -0500
 
 ikiwiki (1.38) unstable; urgency=low
 
