--- a/po/vi.po
+++ b/po/vi.po
@@ -359,9 +359,9 @@ msgstr "lỗi biên dịch %s"
 
 #. translators: The parameter is a filename.
 #: ../IkiWiki/Wrapper.pm:108
-#, fuzzy, perl-format
+#, perl-format
 msgid "successfully generated %s"
-msgstr "%s đã được tạo ra\n"
+msgstr "%s đã được tạo ra"
 
 #: ../ikiwiki.in:13
 msgid "usage: ikiwiki [options] source dest"
