--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (1.39) UNRELEASED; urgency=low
+ikiwiki (1.39) unstable; urgency=low
 
   * Add a rawhtml plugin that allows copying raw html files from the srcdir.
   * Fix --locale to control LC_ALL now.
@@ -17,6 +17,7 @@ ikiwiki (1.39) UNRELEASED; urgency=low
   * In the aggregator, check for and deal with post filenames that are
     longer than the maximum file length.
   * Change the RecentChanges page to show the path of changed pages.
+  * Various minor bugfixes.
 
  -- Joey Hess <joeyh@debian.org>  Sat, 13 Jan 2007 23:30:20 -0500
 
