--- a/doc/patchqueue/move_page.mdwn
+++ b/doc/patchqueue/move_page.mdwn
@@ -29,8 +29,26 @@ Anyhow, here's the patch, for whatever good it does.
 Hmm. Shouldn't that be done on a by-RCS basis, though? (i.e. implemented
 by backends in the `rcs_move` function)
 
+> Probably, yes, but maybe there's a way to avoid duplicating code for that
+> in several of them.
+
 Also, how should ikiwiki react if a page is edited (say, by another user)
 before it is moved? Bail, or shrug and proceed?
+
+> The important thing is to keep in mind that the page could be edited,
+> moved, deleted, etc in between the user starting the move and the move
+> happening. So, the code really needs to deal with all of these cases in
+> some way. It seems fine to me to go ahead with the move even if the page
+> was edited. If the page was deleted or moved, it seems reasonable to exit
+> with an error.
+>
+> Another set of issues exists if a separate web user is trying to edit the
+> page at the same time. We'll have to make sure that something sane
+> happens there; will ikiwiki re-add the moved page under the old name if
+> the user saves their edit after the move? Could be confusing.. I think it
+> probably errors out instead, but I'm not sure. Of course, this is an
+> issue that occurs if the page is moved using a regular svn commit too, so
+> it's not really your concern in a way. :-)
 
 Could you elaborate on [[commit-internals]]? Can I assume that ikiwiki's 
 working copy W will always reflect a revision of the master copy M? 
@@ -41,6 +59,8 @@ the svn backend, it looks like if I edit foo.mdwn, don't commit, and then
 a web user makes different changes, my changes get wiped out. So does
 W "belong" to ikiwiki? --Ethan
 
+> The working copy used by ikiwiki belongs to ikiwiki; it should not be
+> edited directly.
 
     diff -urx .svn ikiwiki/IkiWiki/CGI.pm ikiwiki-new/IkiWiki/CGI.pm
     --- ikiwiki/IkiWiki/CGI.pm	2007-01-04 03:52:47.000000000 -0800
