web commit by KenShan: Add new ikiwiki user

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -36,6 +36,7 @@ Sites that are using ikiwiki include:
 * [Choffee](http://choffee.co.uk/).
 * [Tales from the Gryphon](http://www.golden-gryphon.com/blog/manoj/), Manoj Srivastava's free software blog.
 * [The BSD Associate Admin Book Project](http://bsdwiki.reedmedia.net/)
+* [Proper Treatment 正當作法](http://conway.rutgers.edu/~ccshan/wiki/)
 
 Please feel free to add your own ikiwiki site!
 
