--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ikiwiki (1.40) UNRELEASED; urgency=low
+
+  * Fix missing categories in rss/atom feeds.
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 14 Jan 2007 15:09:49 -0500
+
 ikiwiki (1.39) unstable; urgency=low
 
   * Add a rawhtml plugin that allows copying raw html files from the srcdir.
