--- a/doc/bugs/No_categories_in_RSS__47__Atom_feeds.mdwn
+++ b/doc/bugs/No_categories_in_RSS__47__Atom_feeds.mdwn
@@ -3,3 +3,5 @@ templates have a loop for the categories (I'm assuming that it's the tags
 that it's supposed to be looping through?).
 
 The tags are showing up as expected in the HTML output, just not any feeds.
+
+> Yurk! [[bugs/done]] --[[Joey]]
