* Add French translation by Jean-Luc Coulon. Closes: #406881

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 ikiwiki (1.40) UNRELEASED; urgency=low
 
   * Fix missing categories in rss/atom feeds.
+  * Add French translation by Jean-Luc Coulon. Closes: #406881
 
- -- Joey Hess <joeyh@debian.org>  Sun, 14 Jan 2007 15:09:49 -0500
+ -- Joey Hess <joeyh@debian.org>  Sun, 14 Jan 2007 15:44:42 -0500
 
 ikiwiki (1.39) unstable; urgency=low
 
