--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ ikiwiki (1.40) UNRELEASED; urgency=low
 
   * Fix missing categories in rss/atom feeds.
   * Add French translation by Jean-Luc Coulon. Closes: #406881
+  * Fix bogus use of CDATA in atom feeds. Closes: #406898
 
- -- Joey Hess <joeyh@debian.org>  Sun, 14 Jan 2007 15:44:42 -0500
+ -- Joey Hess <joeyh@debian.org>  Sun, 14 Jan 2007 17:49:11 -0500
 
 ikiwiki (1.39) unstable; urgency=low
 
