--- a/doc/bugs/ikiwiki.setup:_syntax_error_at___40__eval_5__41___line_120__44___at_EOF.mdwn
+++ b/doc/bugs/ikiwiki.setup:_syntax_error_at___40__eval_5__41___line_120__44___at_EOF.mdwn
@@ -5,3 +5,5 @@ Extremely minor bug, but ikiwiki.setup has a line that reads:
 At the end of this line is a period. I think it should read:
 
     #tagbase => "tag",
+
+[[bugs/done]]
