--- a/doc/bugs/svn_fails_to_update.mdwn
+++ b/doc/bugs/svn_fails_to_update.mdwn
@@ -32,3 +32,7 @@ A sample error message (obtained through file redirection) is:
 
 Did I do something stupid again or is this the case on your system too? 
 --Ethan
+
+Additional note: this doesn't happen when performing svn commits from another wc, 
+but *does* happen when committing from the web.
+--Ethan
