web commit by http://ptecza.myopenid.com/: Response

--- a/doc/bugs/Problem_with_editing_page_after_first_SVN_commit.mdwn
+++ b/doc/bugs/Problem_with_editing_page_after_first_SVN_commit.mdwn
@@ -120,3 +120,6 @@ Where is my mistake?
 >>>>>>>> directories above :) --Pawel
 
 >>>>>>>>> All my directories are 755 joey:joey. --[[Joey]]
+
+>>>>>>>>>> Thanks! But I have another situation: a multiuser system and a few
+>>>>>>>>>> ikiwiki commiters. --Pawel
