web commit by http://victormoral.myopenid.com/: Bug fixes in a new version

--- a/doc/plugins/contrib/table___40__third-party_plugin__41__.mdwn
+++ b/doc/plugins/contrib/table___40__third-party_plugin__41__.mdwn
@@ -28,12 +28,25 @@ The parameters are:
 
 - _data_: Contains the values for the table
 - _file_: Wiki page whom contains the data.
+- _format_ (optional): format name of the data. By default is `auto` and the options are `csv` or `dsv`.
 - _delimiter_ (optional): Define the character used for separated the fields. By default is the vertical barr "|" in DSV format and the comma "," for the CSV format.
 - _class_ (optional):  CSS class for the table html element
 - _caption_ (optional):   Text string with the table caption.
 - _no\_header_: This switch disable the generation of table header elements. By default this switch is enabled, and the header cells come from the firts data line.
 
 Obviously, the _data_ and _file_ parameters are mutually exclusive. 
+
+Note: the format detection mechanism is still very rudimentary. 
+
+## Changelog
+
+### version 0.5
+
+* Remove a call to a inexistent Text::CSV method.
+* Added the sep_char parameter.
+* Parse CVS data in binary mode.
+* Added a format detection mechanism.
+* Default format now is 'auto'.
 
 ## Links
 
@@ -43,6 +56,4 @@ Obviously, the _data_ and _file_ parameters are mutually exclusive.
 
 - Download of the tar file from <http://taquiones.net/files/misc/>
 - Debian package in <http://taquiones.net/files/debian/>
-
-
 
