rename and comments

--- a/doc/plugins/contrib/table.mdwn
+++ b/doc/plugins/contrib/table.mdwn
@@ -1,3 +1,5 @@
+[[meta title="table (third-party plugin)"]]
+
 This plugin allows build html tables from data in csv (comma-separated values) or dsv (delimiter-separated values) formats.
 
 It need the perl module [[cpan Text::CSV]] for the csv data. 
