--- a/doc/install.mdwn
+++ b/doc/install.mdwn
@@ -11,7 +11,8 @@ installed, and also uses the following perl modules if available:
 [[cpan CGI::Session]], [[cpan CGI::FormBuilder]] (version 3.02.02 or newer),
 [[cpan Mail::Sendmail]], [[cpan Time::Duration]], [[cpan TimeDate]],
 [[cpan HTML::Scrubber]], [[cpan RPC::XML]], [[cpan XML::Simple]],
-[[cpan XML::Feed]], [[cpan File::MimeInfo]], [[cpan Locale::gettext]].
+[[cpan XML::Feed]], [[cpan File::MimeInfo]], [[cpan Locale::gettext]]
+(version 1.04 or newer).
 
 The [[tla]] support also needs the [[cpan MailTools]] perl module.
 
