--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ikiwiki (1.41) UNRELEASED; urgency=low
+
+  * Gettext 1.04 or up is needed for the OO interface that ikiwiki needs,
+    if an older version is installed, just don't gettext strings, instead of
+    crashing.
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 15 Jan 2007 22:19:02 -0500
+
 ikiwiki (1.40) unstable; urgency=low
 
   * Fix missing categories in rss/atom feeds.
