web commit by hb

--- a/doc/bugs/wrong_rss_url_when_inside_another_blog-like_page.mdwn
+++ b/doc/bugs/wrong_rss_url_when_inside_another_blog-like_page.mdwn
@@ -29,3 +29,6 @@ Is it a bug or did I miss something ?
 > subversion, it would be helpful if you could post a tarball of your wiki,
 > or a test case derived from it that I can use to reproduce the problem
 > --[[Joey]]
+
+>> Joey, thank you, it's ok now. (since the version 1.40, AFAIK, maybe earlier)
+>> --Hugues (hb)
