--- a/doc/bugs/ikiwiki.setup_require_blank_rcs_to_work_as_cgi_only.mdwn
+++ b/doc/bugs/ikiwiki.setup_require_blank_rcs_to_work_as_cgi_only.mdwn
@@ -1,7 +1,7 @@
 I have a mobile setup of ikiwiki.
 
-On my server, I set up an ikiwiki + svn
-On my laptop, I did a check out of the svn and used it as the src of a local ikiwiki (local apache server)
+* On my server, I set up an ikiwiki + svn
+* On my laptop, I did a check out of the svn and used it as the src of a local ikiwiki (local apache server)
 
 I wanted to be able to change my wiki off line with cgi only, and just commit as I come back online.
 
