--- a/doc/bugs/wrong_rss_url_when_inside_another_blog-like_page.mdwn
+++ b/doc/bugs/wrong_rss_url_when_inside_another_blog-like_page.mdwn
@@ -32,3 +32,5 @@ Is it a bug or did I miss something ?
 
 >> Joey, thank you, it's ok now. (since the version 1.40, AFAIK, maybe earlier)
 >> --Hugues (hb)
+
+>>> Thanks for the followup, tagging this [[bugs/done]].
