web commit by hb

--- a/doc/bugs/ikiwiki.setup_require_blank_rcs_to_work_as_cgi_only.mdwn
+++ b/doc/bugs/ikiwiki.setup_require_blank_rcs_to_work_as_cgi_only.mdwn
@@ -6,6 +6,6 @@ I have a mobile setup of ikiwiki.
 I wanted to be able to change my wiki off line with cgi only, and just commit as I come back online.
 
 During the laptop setup, I think that the setup was confused by the fact that my src directory is a versionned one.
-I had to setup explicitely rcs = "" to force it to work the way I wanted.
+I had to setup explicitely rcs => "" to force it to work the way I wanted.
 
 Should it be documented ?
