web commit by hb

--- a/doc/bugs/Changing_language.mdwn
+++ b/doc/bugs/Changing_language.mdwn
@@ -3,3 +3,5 @@ Sorry, this is certainly easy but I can't find the way to change the default lan
 My $LANG was fr_FR.UTF-8 when I installed the 1.40 package. It didn't take it.
 
 How can I setup ikiwiki in order to display French (or German) translated string ?
+
+>Oups, sorry, it's ok, thanks, just in the setup file....
