web commit by hb

--- a/doc/bugs/ikiwiki.setup_require_blank_rcs_to_work_as_cgi_only.mdwn
+++ b/doc/bugs/ikiwiki.setup_require_blank_rcs_to_work_as_cgi_only.mdwn
@@ -9,3 +9,10 @@ During the laptop setup, I think that the setup was confused by the fact that my
 I had to setup explicitely rcs => "" to force it to work the way I wanted.
 
 Should it be documented ?
+
+> after some tests, the main trouble with this setup is that it won't make the "svn add" for the new files.
+> I wonder what should be the setup if I want to use ikiwiki off line on the laptop and then commit back the changes, 
+> without having to take care of the new files before svn commit-ting...
+> --hb (hugues)
+
+
