web commit by JoshTriplett: Add more smileys with noses.  In particular, add B-), which MoinMoin supports.

--- a/doc/smileys.mdwn
+++ b/doc/smileys.mdwn
@@ -4,13 +4,17 @@ Just write the text of a smiley to display it.
 * \:)	[[smileys/smile.png]]
 * \:-)	[[smileys/smile.png]]
 * \:D	[[smileys/biggrin.png]]
+* \:-D	[[smileys/biggrin.png]]
 * \B)	[[smileys/smile2.png]]
+* \B-)	[[smileys/smile2.png]]
 * \:))	[[smileys/smile3.png]]
 * \:-))	[[smileys/smile3.png]]
 * \;)	[[smileys/smile4.png]]
 * \;-)	[[smileys/smile4.png]]
 * \:\	[[smileys/ohwell.png]]
+* \:-\	[[smileys/ohwell.png]]
 * \:/	[[smileys/ohwell.png]]
+* \:-/	[[smileys/ohwell.png]]
 * \>:>	[[smileys/devil.png]]
 * \X-(	[[smileys/angry.png]]
 * \<:(	[[smileys/frown.png]]
